<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="find">Find</string>
    <string name="find_movie">Search Movie</string>
    <string name="find_movie_empty">Insert the title of the movie you\'re looking for here.</string>
    <string name="error_no_connection">Can\'t connect to the internet. Please check your internet connection.</string>
    <string name="movie_released_date">Thursday, Mar 08, 2018</string>
    <string name="movie_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat convallis leo, ac condimentum est gravida at. Suspendisse potenti. Sed ut nisi eget turpis ornare tristique nec congue lacus. Fusce blandit urna id dui vestibulum, at dictum felis pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras vehicula venenatis eros. In lobortis auctor lorem, in suscipit mi posuere sed. Donec tempor lobortis imperdiet. Pellentesque convallis tincidunt porttitor. Vivamus ut ullamcorper leo. Vivamus hendrerit et sem quis blandit. Etiam odio augue, tincidunt eget orci eu, porta pretium mauris. Vestibulum ut nunc in leo interdum lobortis ut efficitur nunc. Nulla vehicula lorem ut ipsum efficitur, quis venenatis nulla euismod. Nunc vehicula cursus ex, vitae condimentum ante dapibus ac.</string>
    <string name="movie_name">Tomb Raider</string>
    <string name="tmdb_image_url">http://image.tmdb.org/t/p/w342/</string>
    <string name="can_not_find_movie">Sorry, we can\'t find the movie you\'re looking for. Please insert another movie title.</string>
    <string name="empty_favourites">You haven\'t saved your favourites movies.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="synopsis">Synopsis</string>
    <string name="upcoming">UPCOMING</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="popular">POPULAR</string>
    <string name="top_rated">TOP RATED</string>
    <string name="nav_about_us">About</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_setting">Setting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_text">Hi, Welcome to Movie Catalogue.</string>
    <string name="setting">Settings</string>
    <string name="language_setting">Language</string>
    <string name="share_movie">Share Movie</string>
    <string name="add_favourite">Add Favourite</string>
    <string name="nav_favourites">Favourites</string>


    <string-array name="language_option">
        <item>English</item>
        <item>Indonesian</item>
    </string-array>
</resources>
