<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movie_creation_black_48px"
            android:title="@string/nav_movies" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_search_black_48px"
            android:title="@string/nav_discover" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_round_favorite_24px"
            android:title="@string/nav_favourites" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_48px"
            android:title="@string/setting"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_error_outline_black_48px"
            android:title="@string/nav_about_us" />
    </group>

</menu>